# kurzlink

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile-dev  LICENSE  README.md  flake.nix  gitlab_redirect_page.template  kurzlink.yml  more_config.yml  redirect.template  serve.sh  vanitymap.yaml
output/: index.html
output/broken/: index.html
output/pingu/: index.html
output/pingus/: index.html
output/tux/: index.html
output/tuxi/: index.html
src/: error.rs  main.rs  templating.rs  utils.rs
src/config/: mod.rs  network.rs  shortlink.rs  tag.rs  templating.rs  url.rs
