[package]
name = "kurzlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
tokio = {version = "1.21", features = ["full"]}
hyper = {version = "0.14", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
