[package]
name = "kurzlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls" ],default-features=false }
serde_yaml = "0.9.14"
serde = { version = "1.0", features = ["derive"] }
minijinja = "0.24.0"
clap = {version="4.0.18",features=["cargo"]}
serde_json = "1.0.87"
