[package]
name = "kurzlink"
version = "1.0.0"
edition = "2021"
description = "A static site generator for your shortlinks"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
serde_yaml = "0.9.14"
serde = { version = "1.0", features = ["derive"] }
minijinja = "0.32.1"
clap = { version = "4.0.18", features = ["cargo"] }
serde_json = "1.0.87"
anyhow = "1.0.66"
url = "2.3.1"
scraper = "0.18.1"

[[bin]]
name = "kurzlink"
path = "src/main.rs"
